--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-      <ul>
-          <li><a href="https://www.facebook.com/rika.matsui.79">facebook</a></li>
-      </ul>
-      <ul>
-          <li><a href="https://instagram.com/dddddddos/"></a>instagram</li>
-      </ul>
-  </nav>
-   <div class="container">
-      <div id="key-block">
-       <img src="me" alt="" width="450">
+ 
+<nav>
+    <ul class="container">
+        <li><a href="index.html">My site</a></li>
+        <li><a href="https://www.facebook.com/rika.matsui.79">facebook</a></li>
+        <li><a href="https://instagram.com/dddddddos/">instagram</a></li>
+    </ul>
+</nav>
+  <div id="wrap">
+    <div id="key-block">
+      
+ 
+     <div class="container">
+    
+       <div align="center">
+          <img src="me" alt="" width="450">
+       </div>
        <h1>Rika Matsui</h1>
        <p>自己紹介の分のところ</p>
+   
+      </div>
     </div>
    </div>
 </body>
