--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>MySite</title>
+    <title>Rikado-S-ite</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,6 +28,9 @@
    
       </div>
     </div>
+   </div>
+   <div id="chame">
+       <li><a href="chame.html"><img src="chame001-2.png" alt="ちゃめ" width="100"></a></li>
    </div>
 </body>
 </html>
