--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
    <div id="chame">
        <li><a href="chame.html"><img src="chame001-2.png" alt="ちゃめ" width="100"></a></li>
    </div>
+   <div id="eye">
+       <li><a href="eye.html"><img src="eye001-1.jpg" alt="" width="100"></a></li>
+   </div>
 </body>
 </html>
