--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <li><a href="chame.html"><img src="chame001-2.png" alt="ちゃめ" width="100"></a></li>
    </div>
    <div id="eye">
-       <li><a href="eye.html"><img src="eye001-1.jpg" alt="" width="100"></a></li>
+       <li><a href="eye.html"><img src="eye-main.png" alt="" width="100"></a></li>
    </div>
 </body>
 </html>
