--- a/chame.html
+++ b/chame.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ちゃめ</title>
+    <link rel="stylesheet" href="style-chame.css">
 </head>
 <body>
    <h1>Chame gallary</h1>
