--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <div align="center">
           <img src="me" alt="" width="450">
        </div>
-       <h1>Rika Matsui</h1>
+       <h1><font face="Helvetica Neue UltraLight">Rika Matsui</font></h1>
        <p>自己紹介の分のところ</p>
    
       </div>
