--- a/eye.html
+++ b/eye.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Eye</title>
+    <link rel="stylesheet" href="style-eye.css">
 </head>
 <body>
     <h1>eye</h1>
     <img src="eye001-1.jpg" alt="" width="100">
+    <img src="eye001-2.jpg" alt="" width="100">
+    <img src="eye001-3.jpg" alt="" width="100">
+    <img src="eye001-4.jpg" alt="" width="100">
+    <img src="eye001-5.jpg" alt="" width="100">
+    <img src="eye002-1.jpg" alt="" width="100">
+    <img src="eye002-2.jpg" alt="" width="100">
+    <img src="eye002-3.jpg" alt="" width="100">
+    <img src="eye003-1.jpg" alt="" width="100">
+    <img src="eye003-2.jpg" alt="" width="100">
+    <img src="eye003-3.jpg" alt="" width="100">
+    <img src="eye003-4.jpg" alt="" width="100">
+    <img src="eye003-5.jpg" alt="" width="100">
+    
+     
 </body>
 </html>
