--- a/chame.html
+++ b/chame.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style-chame.css">
 </head>
 <body>
-   <h1>Chame gallary</h1>
+   <h1>Chame's gallary</h1>
+    <p>我が家のちゃめ(♂)のかわいくない写真たち</p>
+   
     <img src="chame001.jpg" alt="みあげるちゃめ" width="120">
 </body>
 </html>
