--- a/eye.html
+++ b/eye.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>eye</h1>
+    <p>twitterなどから見つけてきた"目"の画像を描いたもの</p>
     <img src="eye001-1.jpg" alt="" width="100">
     <img src="eye001-2.jpg" alt="" width="100">
     <img src="eye001-3.jpg" alt="" width="100">
