--- a/chame.html
+++ b/chame.html
@@ -10,5 +10,40 @@
     <p>我が家のちゃめ(♂)のかわいくない写真たち</p>
    
     <img src="chame001.jpg" alt="みあげるちゃめ" width="120">
+    <img src="chame002.jpg" alt="" width="120">
+    <img src="chame003.jpg" alt="" width="120">
+    <img src="chame004.jpg" alt="" width="120">
+    <img src="chame005.jpg" alt="" width="120">
+    <img src="chame006.jpg" alt="" width="120">
+    <img src="chame007.jpg" alt="" width="120">
+    <img src="chame008.jpg" alt="" width="120">
+    <img src="chame009.jpg" alt="" width="120">
+    <img src="chame010.jpg" alt="" width="120">
+    <img src="chame011.jpg" alt="" width="120">
+    <img src="chame012.jpg" alt="" width="120">
+    <img src="chame013.jpg" alt="" width="120">
+    <img src="chame014.jpg" alt="" width="120">
+    <img src="chame015.jpg" alt="" width="120">
+    <img src="chame016.jpg" alt="" width="120">
+    <img src="chame017.jpg" alt="" width="120">
+    <img src="chame018.jpg" alt="" width="120">
+    <img src="chame019.jpg" alt="" width="120">
+    <img src="chame020.jpg" alt="" width="120">
+    <img src="chame021.jpg" alt="" width="120">
+    <img src="chame022.jpg" alt="" width="120">
+    <img src="chame023.jpg" alt="" width="120">
+    <img src="chame024.jpg" alt="" width="120">
+    <img src="chame025.jpg" alt="" width="120">
+    <img src="chame026.jpg" alt="" width="120">
+    <img src="chame027.jpg" alt="" width="120">
+    <img src="chame028.jpg" alt="" width="120">
+    <img src="chame029.jpg" alt="" width="120">
+    <img src="chame030.jpg" alt="" width="120">
+    <img src="chame031.jpg" alt="" width="120">
+    <img src="chame032.jpg" alt="" width="120">
+    <img src="chame033.jpg" alt="" width="120">
+    <img src="chame034.jpg" alt="" width="120">
+    <img src="chame035.jpg" alt="" width="120">
 </body>
+
 </html>
