+自己紹介分etc

--- a/index.html
+++ b/index.html
@@ -23,17 +23,26 @@
        <div align="center">
           <img src="me" alt="" width="450">
        </div>
-       <h1><font face="Helvetica Neue UltraLight">Rika Matsui</font></h1>
-       <p>自己紹介の分のところ</p>
-   
+       <h1>Rika Matsui</h1>
+         <h5>
+         法政大学デザイン工学部システムデザイン学科３年
+         </h5>
+         
+         <p>我が家は猫好きである。
+         アメリカンショートヘアの男の子と一緒に暮らす。
+         名前はちゃめ。</p>
+         <p>中高時代は美術部の幽霊部員だったが、下手なりに絵を描くのは好き。</p>
+         
       </div>
     </div>
    </div>
+   <div id="box1">
    <div id="chame">
        <li><a href="chame.html"><img src="chame001-2.png" alt="ちゃめ" width="100"></a></li>
    </div>
    <div id="eye">
        <li><a href="eye.html"><img src="eye-main.png" alt="" width="100"></a></li>
+   </div>
    </div>
 </body>
 </html>
