--- a/chame.html
+++ b/chame.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="style-chame.css">
 </head>
 <body>
+  <nav>
+    <ul class="container">
+        <li><a href="index.html">My site</a></li>
+        <li><a href="https://www.facebook.com/rika.matsui.79">facebook</a></li>
+        <li><a href="https://instagram.com/dddddddos/">instagram</a></li>
+    
+        <li><a href="chame.html">chame</a></li>
+        <li><a href="eye.html">eye</a></li>
+        </ul>
+</nav>
    <h1>Chame's gallary</h1>
     <p>我が家のちゃめ(♂)のかわいくない写真たち</p>
    
